--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#home">HOME<span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="#home" data-toggle="collapse" data-target=".navbar-collapse.show">HOME<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#about">ABOUT</a>
+                                    <a class="nav-link" href="#about" data-toggle="collapse" data-target=".navbar-collapse.show">ABOUT</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#services">SERVICES</a>
+                                    <a class="nav-link" href="#services" data-toggle="collapse" data-target=".navbar-collapse.show">SERVICES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#gallery">GALLERY</a>
+                                    <a class="nav-link" href="#gallery" data-toggle="collapse" data-target=".navbar-collapse.show">GALLERY</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#blog">BLOG</a>
+                                    <a class="nav-link" href="#blog" data-toggle="collapse" data-target=".navbar-collapse.show">BLOG</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#contact">CONTACT</a>
+                                <li class="nav-item" >
+                                    <a class="nav-link" href="#contact" data-toggle="collapse" data-target=".navbar-collapse.show">CONTACT</a>
                                 </li>
                         </ul>
                         </div>
@@ -87,15 +87,13 @@
         <div class="container">
             <div class="services-container row">
 
-                <div class="col-sm-12 col-md-6">
+                <div class="middle col-sm-12 col-md-6">
                     <ul class="lista">
                         <li class="lista-li"><a class="lista-link">Online Shopping<i class="icon"><img src="images/wozek.jpg"></i></a></li>
                         <li class="lista-li"><a class="lista-link">Quality Product<i class="icon"><img src="images/reka.jpg"></i></a></li>
                         <li class="lista-li"><a class="lista-link">Domestic & International Delivery<i class="icon"><img src="images/globus.jpg"></i></a></li>
                         <li class="lista-li"><a class="lista-link">Well Organized<i class="icon"><img src="images/marchewka.jpg"></i></a></li>
-                    </ul>
-
-                    
+                    </ul>   
                 </div>
                 <div class="img-pomidory col-sm-12 col-md-6">
                     <img class="our-services-pomidory" src="images/pomidory.png"> 
